# cpp_cmake_learn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: CMakeLists.txt  config.h  env.cpp
include/: head.h
lib/compile/: CMakeLists.txt
lib/compile/include/: head.h
src/: CMakeLists.txt
test/: CMakeLists.txt  index.cpp
utils/: CMakeLists.txt  get-time.cpp  output-chinese.cpp  utils.h
